--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
     .week-card:nth-child(2) { animation-delay: 0.2s; }
     .week-card:nth-child(3) { animation-delay: 0.3s; }
     .week-card:nth-child(4) { animation-delay: 0.4s; }
+    .week-card:nth-child(5) { animation-delay: 0.5s; }
 
     .week-badge {
       display: inline-flex;
@@ -457,6 +458,29 @@
           <div class="resource-links">
             <a href="week3/index.html" class="btn-primary">Main Lecture</a>
             <a href="week3/classwork.html" class="btn-secondary">💻 Classwork</a>
+          </div>
+        </div>
+
+        <!-- Week 4 -->
+        <div class="week-card">
+          <span class="week-badge">
+            <span>📱</span>
+            Week 4
+          </span>
+          <h2 class="week-title">Mobile-First Design & Flexbox</h2>
+          <p class="week-description">
+            Master responsive design with a mobile-first approach. Learn Flexbox for modern layouts and understand the business value of mobile optimization.
+          </p>
+          <ul class="topics-list">
+            <li>Mobile-First Mindset & Strategy</li>
+            <li>Flexbox Layout Fundamentals</li>
+            <li>Responsive Design Patterns</li>
+            <li>PWA & Modern Web Technologies</li>
+          </ul>
+          <div class="resource-links">
+            <a href="week4/index.html" class="btn-primary">Main Lecture</a>
+            <a href="week4/theory.html" class="btn-secondary">📚 Business Theory</a>
+            <a href="week4/live-demo/index.html" class="btn-secondary">🎯 Live Demo</a>
           </div>
         </div>
       </div>
