--- a/index.html
+++ b/index.html
@@ -483,6 +483,27 @@
             <a href="week4/live-demo/index.html" class="btn-secondary">🎯 Live Demo</a>
           </div>
         </div>
+
+        <!-- Week 5 -->
+        <div class="week-card">
+          <span class="week-badge">
+            <span>⚙️</span>
+            Week 5
+          </span>
+          <h2 class="week-title">JavaScript & Node.js Fundamentals</h2>
+          <p class="week-description">
+            Explore how JavaScript powers interactivity on the web and how Node.js takes it beyond the browser to build powerful server applications.
+          </p>
+          <ul class="topics-list">
+            <li>JavaScript Variables & Data Types</li>
+            <li>Loops, Arrays & Functions</li>
+            <li>Objects & Array Methods</li>
+            <li>Introduction to Node.js</li>
+          </ul>
+          <div class="resource-links">
+            <a href="week5/index.html" class="btn-primary">Main Lecture</a>
+          </div>
+        </div>
       </div>
 
       <!-- Classwork Section -->
