--- a/week4/theory.html
+++ b/week4/theory.html
@@ -496,6 +496,7 @@
           <span class="brand-text">Week 4 — Class 1 (Business): Mobile‑First Mindset</span>
         </div>
         <div class="controls">
+          <a href="../index.html" class="btn" style="text-decoration:none;color:inherit">🏠 Home</a>
           <button class="btn" id="prev">← Prev</button>
           <button class="btn primary" id="next">Next →</button>
         </div>
