--- a/week4/index.html
+++ b/week4/index.html
@@ -117,6 +117,7 @@
       <div class="bar">
         <div class="brand"><span class="dot"></span> Week 4 · Class 1 — Mobile‑First & Flexbox</div>
         <div class="controls">
+          <a href="../index.html" class="btn ghost" style="text-decoration:none;color:inherit">🏠 Home</a>
           <button class="btn ghost" id="toggle-dark">Dark</button>
           <button class="btn" id="prev">← Prev</button>
           <button class="btn primary" id="next">Next →</button>
