--- a/index.html
+++ b/index.html
@@ -502,6 +502,51 @@
           </ul>
           <div class="resource-links">
             <a href="week5/index.html" class="btn-primary">Main Lecture</a>
+            <a href="week5-2/index.html" class="btn-secondary">📡 Class II: Web APIs</a>
+          </div>
+        </div>
+
+        <!-- Week 6 -->
+        <div class="week-card">
+          <span class="week-badge">
+            <span>🔌</span>
+            Week 6
+          </span>
+          <h2 class="week-title">Node.js: Endpoints, Status Codes & Error Handling</h2>
+          <p class="week-description">
+            Build real backend APIs with Express.js. Learn to create endpoints, return JSON, use HTTP status codes correctly, and implement professional error handling.
+          </p>
+          <ul class="topics-list">
+            <li>Understanding API Endpoints</li>
+            <li>Express.js Route Handlers</li>
+            <li>HTTP Status Codes</li>
+            <li>Error Handling with Try/Catch</li>
+            <li>JSON Responses & Middleware</li>
+          </ul>
+          <div class="resource-links">
+            <a href="week6/index.html" class="btn-primary">Main Lecture</a>
+          </div>
+        </div>
+
+        <!-- Week 7 -->
+        <div class="week-card">
+          <span class="week-badge">
+            <span>⚛️</span>
+            Week 7
+          </span>
+          <h2 class="week-title">JavaScript Equality & React Basics</h2>
+          <p class="week-description">
+            Master JavaScript equality operators (== vs ===) and bridge to React. Learn to fetch and render JSON in React components with proper data handling.
+          </p>
+          <ul class="topics-list">
+            <li>== vs === (Loose vs Strict Equality)</li>
+            <li>JSON in React</li>
+            <li>React Components & Props</li>
+            <li>JSX Basics</li>
+            <li>Fetching Data in React</li>
+          </ul>
+          <div class="resource-links">
+            <a href="week7/index.html" class="btn-primary">Main Lecture</a>
           </div>
         </div>
       </div>
