--- a/week12/index.html
+++ b/week12/index.html
@@ -38,7 +38,9 @@
             font-size: 11pt;
             line-height: 1.6;
             color: var(--text-dark);
-            background: white;
+            background: #F1F5F9;
+            padding: 0;
+            margin: 0;
         }
 
         .page {
@@ -48,10 +50,34 @@
             background: white;
             page-break-after: always;
             position: relative;
+            margin: 0 auto 20px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
 
         .page:last-child {
             page-break-after: avoid;
+            margin-bottom: 0;
+        }
+
+        /* Responsive adjustments for screen viewing */
+        @media screen {
+            body {
+                padding: 20px;
+                background: #E2E8F0;
+            }
+
+            .page {
+                max-width: 100%;
+                width: min(210mm, calc(100vw - 40px));
+                min-height: auto;
+                padding: clamp(15px, 5vw, 20mm);
+                margin-bottom: 30px;
+            }
+
+            .cover {
+                padding: clamp(20px, 8vw, 30mm);
+                min-height: min(297mm, calc(100vh - 40px));
+            }
         }
 
         /* Cover Page */
@@ -108,23 +134,23 @@
         }
 
         .cover-title {
-            font-size: 42px;
+            font-size: clamp(28px, 6vw, 42px);
             font-weight: 800;
             margin-bottom: 16px;
             letter-spacing: -1px;
         }
 
         .cover-subtitle {
-            font-size: 20px;
+            font-size: clamp(16px, 3vw, 20px);
             color: var(--primary);
-            margin-bottom: 40px;
+            margin-bottom: clamp(30px, 5vw, 40px);
         }
 
         .cover-description {
-            font-size: 16px;
+            font-size: clamp(14px, 2.5vw, 16px);
             color: #94A3B8;
             max-width: 500px;
-            margin: 0 auto 50px;
+            margin: 0 auto clamp(30px, 6vw, 50px);
             line-height: 1.7;
         }
 
@@ -169,7 +195,7 @@
         }
 
         .section-title {
-            font-size: 28px;
+            font-size: clamp(22px, 4vw, 28px);
             font-weight: 800;
             color: var(--text-dark);
             letter-spacing: -0.5px;
@@ -177,17 +203,17 @@
 
         /* Content Styles */
         h2 {
-            font-size: 20px;
+            font-size: clamp(18px, 3vw, 20px);
             font-weight: 700;
             color: var(--text-dark);
-            margin: 24px 0 12px;
+            margin: clamp(20px, 3vw, 24px) 0 12px;
         }
 
         h3 {
-            font-size: 16px;
+            font-size: clamp(15px, 2.5vw, 16px);
             font-weight: 600;
             color: var(--text-dark);
-            margin: 20px 0 10px;
+            margin: clamp(16px, 2.5vw, 20px) 0 10px;
         }
 
         p {
@@ -374,6 +400,12 @@
             margin: 20px 0;
         }
 
+        @media screen and (max-width: 768px) {
+            .cards-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
         .card {
             background: #F8FAFC;
             border-radius: 12px;
@@ -508,6 +540,12 @@
             margin: 20px 0;
         }
 
+        @media screen and (max-width: 768px) {
+            .comparison {
+                grid-template-columns: 1fr;
+            }
+        }
+
         .comparison-col {
             background: #F8FAFC;
             border-radius: 12px;
@@ -558,6 +596,127 @@
 
         .debug-line.success {
             color: #4ADE80;
+        }
+
+        /* Additional responsive styles */
+        @media screen and (max-width: 1024px) {
+            .cover-meta {
+                flex-wrap: wrap;
+                gap: 20px;
+            }
+
+            .cover-icon {
+                width: clamp(60px, 12vw, 100px);
+                height: clamp(60px, 12vw, 100px);
+                font-size: clamp(32px, 6vw, 48px);
+            }
+
+            .cover-badge {
+                font-size: clamp(10px, 2vw, 12px);
+                padding: clamp(6px, 1.5vw, 8px) clamp(15px, 3vw, 20px);
+            }
+        }
+
+        @media screen and (max-width: 768px) {
+            body {
+                padding: 10px;
+                font-size: 10pt;
+            }
+
+            .page {
+                padding: clamp(12px, 4vw, 15mm);
+                width: 100%;
+                margin-bottom: 20px;
+            }
+
+            .page-footer {
+                font-size: 9px;
+                bottom: 12px;
+                left: 12px;
+                right: 12px;
+            }
+
+            .cover-meta {
+                flex-direction: column;
+                gap: 15px;
+            }
+
+            .info-box,
+            .quote-box,
+            .highlight-box {
+                padding: clamp(12px, 3vw, 20px);
+            }
+
+            .table-container {
+                overflow-x: auto;
+                -webkit-overflow-scrolling: touch;
+            }
+
+            table {
+                min-width: 600px;
+            }
+
+            .code-block {
+                overflow-x: auto;
+                font-size: 10px;
+            }
+
+            .diagram-box {
+                font-size: 9px;
+                padding: 16px;
+                overflow-x: auto;
+            }
+        }
+
+        @media screen and (max-width: 480px) {
+            .page {
+                padding: 10px;
+            }
+
+            .section-header {
+                margin-bottom: 16px;
+                padding-bottom: 12px;
+            }
+
+            .step {
+                gap: 12px;
+            }
+
+            .step-number {
+                width: 28px;
+                height: 28px;
+                font-size: 12px;
+            }
+
+            .card {
+                padding: 16px;
+            }
+
+            .card-icon {
+                width: 36px;
+                height: 36px;
+                font-size: 16px;
+            }
+        }
+
+        /* Print styles remain unchanged */
+        @media print {
+            body {
+                background: white;
+                padding: 0;
+            }
+
+            .page {
+                width: 210mm;
+                min-height: 297mm;
+                margin: 0;
+                box-shadow: none;
+                page-break-after: always;
+            }
+
+            .page:last-child {
+                page-break-after: avoid;
+            }
         }
     </style>
 </head>
