lecture updates for UX

--- a/index.html
+++ b/index.html
@@ -758,6 +758,7 @@
           <div class="resource-links">
             <a href="week12/index.html" class="btn-primary">Case Study</a>
             <a href="week12/project/index.html" class="btn-secondary">🔗 Project Outline</a>
+            <a href="week12/tech_stack/index.html" class="btn-secondary">⚙️ Tech Stack Guide</a>
           </div>
         </div>
       </div>
