--- a/week12/project/index.html
+++ b/week12/project/index.html
@@ -792,12 +792,12 @@
                     <div class="col-box">
                         <h4>Assignment Weights</h4>
                         <ul style="font-size: 0.95rem;">
-                            <li>Assignment 1: Planning — 15%</li>
-                            <li>Assignment 2: Design — 15%</li>
-                            <li>Assignment 3: Sprint 1 — 20%</li>
-                            <li>Assignment 4: Sprint 2 — 20%</li>
-                            <li>Assignment 5: Testing — 10%</li>
-                            <li>Assignment 6: Final — 20%</li>
+                            <li>Assignment 1: Planning — 15</li>
+                            <li>Assignment 2: Design — 15</li>
+                            <li>Assignment 3: Sprint 1 — 20</li>
+                            <li>Assignment 4: Sprint 2 — 20</li>
+                            <li>Assignment 5: Testing — 10</li>
+                            <li>Assignment 6: Final — 20</li>
                         </ul>
                     </div>
                     <div class="col-box">
