--- a/week5-2/index.html
+++ b/week5-2/index.html
@@ -55,6 +55,18 @@
       color: #facc15;
       background: rgba(250, 204, 21, 0.1);
     }
+    
+    /* Navigation Menu */
+    .nav-menu{position:relative;display:inline-block;}
+    .nav-toggle{color:#94a3b8;text-decoration:none;padding:0.5rem 1rem;border-radius:8px;transition:all 0.2s;font-size:0.9rem;display:flex;align-items:center;gap:0.5rem;cursor:pointer;border:none;background:transparent;font-family:inherit;}
+    .nav-toggle:hover{color:#facc15;background:rgba(250,204,21,0.1);}
+    .nav-dropdown{position:absolute;top:calc(100% + 8px);right:0;background:rgba(15,23,42,0.95);backdrop-filter:blur(10px);border:1px solid rgba(255,255,255,0.1);border-radius:12px;padding:8px;min-width:200px;box-shadow:0 8px 32px rgba(0,0,0,.4);opacity:0;visibility:hidden;transform:translateY(-10px);transition:all .2s ease;z-index:1000;max-height:70vh;overflow-y:auto;}
+    .nav-dropdown.show{opacity:1;visibility:visible;transform:translateY(0);}
+    .nav-dropdown a{display:block;padding:8px 12px;color:#94a3b8;text-decoration:none;border-radius:6px;font-size:13px;transition:all .15s ease;}
+    .nav-dropdown a:hover{background:rgba(250,204,21,0.1);color:#facc15;}
+    .nav-dropdown a.active{background:rgba(250,204,21,0.2);color:#facc15;font-weight:600;}
+    .nav-section-title{font-size:11px;text-transform:uppercase;letter-spacing:1px;color:#64748b;padding:8px 12px 4px;font-weight:700;margin-top:4px;}
+    .nav-section-title:first-child{margin-top:0;}
     main {
       padding-top: 60px;
       height: 100vh;
@@ -94,9 +106,30 @@
       <span class="dot"></span>
       <span>Week 5 · Class II: Web APIs with Express.js</span>
     </div>
-    <a href="../index.html" class="nav-link" title="Back to Home">
-      🏠 Home
-    </a>
+    <div class="nav-menu">
+      <button class="nav-toggle" onclick="document.querySelector('.nav-dropdown').classList.toggle('show')">
+        📚 Lectures <span style="font-size:10px;">▼</span>
+      </button>
+      <div class="nav-dropdown">
+        <a href="../index.html" class="nav-section-title" style="padding-top:12px;">🏠 Home</a>
+        <a href="../index.html">Main Page</a>
+        <div class="nav-section-title">📖 Weekly Lectures</div>
+        <a href="../week1/index.html">Week 1: Web Basics</a>
+        <a href="../week2/index.html">Week 2: HTML5 Structure</a>
+        <a href="../week3/index.html">Week 3: CSS Styling</a>
+        <a href="../week4/index.html">Week 4: Mobile-First & Flexbox</a>
+        <a href="../week5/index.html">Week 5: JavaScript & Node.js</a>
+        <a href="../week5-2/index.html" class="active">Week 5-2: Web APIs</a>
+        <a href="../week6/index.html">Week 6: Node.js Endpoints</a>
+        <a href="../week7/index.html">Week 7: React Basics</a>
+        <a href="../week9/index.html">Week 9: SEO & UX with AI</a>
+        <a href="../week12/index.html">Week 12: CareDesk Case Study</a>
+        <div class="nav-section-title">📚 Special Topics</div>
+        <a href="../system-design/index.html">System Design</a>
+        <a href="../final/index.html">Final Exam Guide</a>
+        <a href="../comprehensive-quiz.html">📝 Comprehensive Quiz</a>
+      </div>
+    </div>
   </header>
   <main>
   <section class="active">
@@ -228,6 +261,15 @@ app.get("/api/search", (req, res) => {
         slides[current].classList.remove('active');
         current = (current - 1 + slides.length) % slides.length;
         slides[current].classList.add('active');
+      }
+    });
+    
+    // Close nav dropdown when clicking outside
+    document.addEventListener('click', function(e) {
+      const navMenu = document.querySelector('.nav-menu');
+      const dropdown = document.querySelector('.nav-dropdown');
+      if (navMenu && dropdown && !navMenu.contains(e.target) && dropdown.classList.contains('show')) {
+        dropdown.classList.remove('show');
       }
     });
   </script>
