--- a/index.html
+++ b/index.html
@@ -165,6 +165,28 @@
       box-shadow: 0 4px 12px rgba(0, 209, 255, 0.3);
     }
 
+    .nav-special-link {
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      padding: 8px 14px;
+      background: rgba(139, 92, 246, 0.15);
+      border: 1px solid rgba(139, 92, 246, 0.3);
+      border-radius: 8px;
+      color: #a78bfa;
+      text-decoration: none;
+      font-size: 13px;
+      font-weight: 600;
+      transition: all 0.2s ease;
+    }
+
+    .nav-special-link:hover {
+      background: rgba(139, 92, 246, 0.25);
+      border-color: #a78bfa;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 12px rgba(139, 92, 246, 0.3);
+    }
+
     /* Header */
     header {
       text-align: center;
@@ -515,7 +537,8 @@
         padding: 0 10px;
       }
 
-      .nav-quiz-link {
+      .nav-quiz-link,
+      .nav-special-link {
         font-size: 12px;
         padding: 6px 12px;
       }
@@ -538,6 +561,7 @@
           <a href="#week7" class="nav-week-link" data-week="7">W7</a>
           <a href="#week9" class="nav-week-link special" data-week="9">W9</a>
           <a href="#week12" class="nav-week-link special" data-week="12">W12</a>
+          <a href="system-design/index.html" class="nav-special-link">🏗️ System Design</a>
           <a href="comprehensive-quiz.html" class="nav-quiz-link">📝 Quiz</a>
         </div>
       </div>
@@ -759,6 +783,28 @@
             <a href="week12/index.html" class="btn-primary">Case Study</a>
             <a href="week12/project/index.html" class="btn-secondary">🔗 Project Outline</a>
             <a href="week12/tech_stack/index.html" class="btn-secondary">⚙️ Tech Stack Guide</a>
+          </div>
+        </div>
+
+        <!-- System Design -->
+        <div class="week-card" id="system-design">
+          <span class="week-badge" style="background: rgba(139, 92, 246, 0.15); border-color: rgba(139, 92, 246, 0.4); color: #a78bfa;">
+            <span>🏗️</span>
+            System Design
+          </span>
+          <h2 class="week-title">Functional & Non-Functional Requirements</h2>
+          <p class="week-description">
+            Master the fundamentals of software requirements analysis. Learn to distinguish between functional and non-functional requirements, understand their importance, and apply them in real-world web development projects.
+          </p>
+          <ul class="topics-list">
+            <li>Functional Requirements (FR) - What the system does</li>
+            <li>Non-Functional Requirements (NFR) - How the system performs</li>
+            <li>Real-world examples and use cases</li>
+            <li>Requirements gathering techniques</li>
+            <li>Balancing FR and NFR for project success</li>
+          </ul>
+          <div class="resource-links">
+            <a href="system-design/index.html" class="btn-primary">View Lecture</a>
           </div>
         </div>
       </div>
