--- a/week1/index.html
+++ b/week1/index.html
@@ -57,7 +57,19 @@
       border-bottom:1px solid rgba(255,255,255,.06);
     }
     .badge{display:inline-flex; align-items:center; gap:8px; padding:6px 10px; border-radius:999px; background:rgba(255,255,255,.06); box-shadow: var(--shadow);}
-    .dot{width:8px;height:8px;border-radius:999px;background:var(--accent-2); box-shadow:0 0 12px var(--accent-2);}    
+    .dot{width:8px;height:8px;border-radius:999px;background:var(--accent-2); box-shadow:0 0 12px var(--accent-2);}
+    
+    /* Navigation Menu */
+    .nav-menu{position:relative; margin-left:auto;}
+    .nav-toggle{background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.1); color:var(--ink); padding:6px 12px; border-radius:8px; cursor:pointer; font-size:14px; font-weight:600; transition:all .2s ease; display:flex; align-items:center; gap:6px;}
+    .nav-toggle:hover{background:rgba(255,255,255,.12); border-color:rgba(255,255,255,.2);}
+    .nav-dropdown{position:absolute; top:calc(100% + 8px); right:0; background:var(--panel); border:1px solid rgba(255,255,255,.12); border-radius:12px; padding:8px; min-width:200px; box-shadow:0 8px 32px rgba(0,0,0,.4); opacity:0; visibility:hidden; transform:translateY(-10px); transition:all .2s ease; z-index:1000; max-height:70vh; overflow-y:auto;}
+    .nav-dropdown.show{opacity:1; visibility:visible; transform:translateY(0);}
+    .nav-dropdown a{display:block; padding:8px 12px; color:var(--muted); text-decoration:none; border-radius:6px; font-size:13px; transition:all .15s ease;}
+    .nav-dropdown a:hover{background:rgba(255,255,255,.08); color:var(--ink);}
+    .nav-dropdown a.active{background:rgba(124,92,255,.2); color:var(--accent); font-weight:600;}
+    .nav-section-title{font-size:11px; text-transform:uppercase; letter-spacing:1px; color:var(--muted); padding:8px 12px 4px; font-weight:700; margin-top:4px;}
+    .nav-section-title:first-child{margin-top:0;}    
 
     /* Slides */
     .stage{position:relative; height:100%;}
@@ -121,7 +133,30 @@
       <span class="badge"><span class="dot"></span> Web Technologies 101</span>
       <span class="muted">Week 1 · Class 1</span>
       <span class="muted">Use ← → or Space to navigate • Press D for dark/light</span>
-      <a href="../index.html" style="margin-left:auto;color:#7dd3fc;text-decoration:none;font-size:14px;font-weight:600;padding:6px 12px;background:rgba(255,255,255,.06);border-radius:8px;border:1px solid rgba(255,255,255,.1);transition:all .2s ease" onmouseover="this.style.background='rgba(255,255,255,.12)'" onmouseout="this.style.background='rgba(255,255,255,.06)'">← Back to Home</a>
+      <div class="nav-menu">
+        <button class="nav-toggle" onclick="document.querySelector('.nav-dropdown').classList.toggle('show')">
+          📚 Lectures <span style="font-size:10px;">▼</span>
+        </button>
+        <div class="nav-dropdown">
+          <a href="../index.html" class="nav-section-title" style="padding-top:12px;">🏠 Home</a>
+          <a href="../index.html">Main Page</a>
+          <div class="nav-section-title">📖 Weekly Lectures</div>
+          <a href="../week1/index.html" class="active">Week 1: Web Basics</a>
+          <a href="../week2/index.html">Week 2: HTML5 Structure</a>
+          <a href="../week3/index.html">Week 3: CSS Styling</a>
+          <a href="../week4/index.html">Week 4: Mobile-First & Flexbox</a>
+          <a href="../week5/index.html">Week 5: JavaScript & Node.js</a>
+          <a href="../week5-2/index.html">Week 5-2: Web APIs</a>
+          <a href="../week6/index.html">Week 6: Node.js Endpoints</a>
+          <a href="../week7/index.html">Week 7: React Basics</a>
+          <a href="../week9/index.html">Week 9: SEO & UX with AI</a>
+          <a href="../week12/index.html">Week 12: CareDesk Case Study</a>
+          <div class="nav-section-title">📚 Special Topics</div>
+          <a href="../system-design/index.html">System Design</a>
+          <a href="../final/index.html">Final Exam Guide</a>
+          <a href="../comprehensive-quiz.html">📝 Comprehensive Quiz</a>
+        </div>
+      </div>
     </div>
 
     <div class="stage" id="stage">
@@ -331,6 +366,15 @@
 
     // Initialize
     setSlide(0);
+    
+    // Close nav dropdown when clicking outside
+    document.addEventListener('click', function(e) {
+      const navMenu = document.querySelector('.nav-menu');
+      const dropdown = document.querySelector('.nav-dropdown');
+      if (!navMenu.contains(e.target) && dropdown.classList.contains('show')) {
+        dropdown.classList.remove('show');
+      }
+    });
   </script>
 </body>
 </html>
