--- a/week2/index.html
+++ b/week2/index.html
@@ -31,6 +31,18 @@
     .btn:hover{ transform: translateY(-1px); }
     .progress{ height:6px; flex:1; border-radius:999px; background: rgba(255,255,255,.1); overflow:hidden; }
     .progress>i{ display:block; height:100%; width:0; background: linear-gradient(90deg, var(--accent), var(--blue)); }
+    
+    /* Navigation Menu */
+    .nav-menu{position:relative;}
+    .nav-toggle{background:linear-gradient(180deg, #1b2030, #141824); border:1px solid rgba(255,255,255,.12); color:#eef2ff; padding:10px 14px; border-radius:10px; cursor:pointer; font-weight:600; font-size:14px; transition:all .2s ease; display:flex; align-items:center; gap:6px;}
+    .nav-toggle:hover{transform:translateY(-1px); border-color:rgba(255,255,255,.2);}
+    .nav-dropdown{position:absolute; bottom:calc(100% + 8px); right:0; background:#151821; border:1px solid rgba(255,255,255,.12); border-radius:12px; padding:8px; min-width:200px; box-shadow:0 -8px 32px rgba(0,0,0,.4); opacity:0; visibility:hidden; transform:translateY(10px); transition:all .2s ease; z-index:1000; max-height:70vh; overflow-y:auto;}
+    .nav-dropdown.show{opacity:1; visibility:visible; transform:translateY(0);}
+    .nav-dropdown a{display:block; padding:8px 12px; color:var(--muted); text-decoration:none; border-radius:6px; font-size:13px; transition:all .15s ease;}
+    .nav-dropdown a:hover{background:rgba(255,255,255,.08); color:var(--text);}
+    .nav-dropdown a.active{background:rgba(255,140,0,.2); color:var(--accent); font-weight:600;}
+    .nav-section-title{font-size:11px; text-transform:uppercase; letter-spacing:1px; color:var(--muted); padding:8px 12px 4px; font-weight:700; margin-top:4px;}
+    .nav-section-title:first-child{margin-top:0;}
   </style>
 </head>
 <body>
@@ -269,7 +281,30 @@
       <div class="progress"><i id="prog"></i></div>
       <span class="kbd">←</span>
       <span class="kbd">→</span>
-      <a href="../index.html" class="btn" style="text-decoration:none;color:#e5e7eb" title="Back to Home">🏠 Home</a>
+      <div class="nav-menu">
+        <button class="nav-toggle" onclick="document.querySelector('.nav-dropdown').classList.toggle('show')">
+          📚 Lectures <span style="font-size:10px;">▲</span>
+        </button>
+        <div class="nav-dropdown">
+          <a href="../index.html" class="nav-section-title" style="padding-top:12px;">🏠 Home</a>
+          <a href="../index.html">Main Page</a>
+          <div class="nav-section-title">📖 Weekly Lectures</div>
+          <a href="../week1/index.html">Week 1: Web Basics</a>
+          <a href="../week2/index.html" class="active">Week 2: HTML5 Structure</a>
+          <a href="../week3/index.html">Week 3: CSS Styling</a>
+          <a href="../week4/index.html">Week 4: Mobile-First & Flexbox</a>
+          <a href="../week5/index.html">Week 5: JavaScript & Node.js</a>
+          <a href="../week5-2/index.html">Week 5-2: Web APIs</a>
+          <a href="../week6/index.html">Week 6: Node.js Endpoints</a>
+          <a href="../week7/index.html">Week 7: React Basics</a>
+          <a href="../week9/index.html">Week 9: SEO & UX with AI</a>
+          <a href="../week12/index.html">Week 12: CareDesk Case Study</a>
+          <div class="nav-section-title">📚 Special Topics</div>
+          <a href="../system-design/index.html">System Design</a>
+          <a href="../final/index.html">Final Exam Guide</a>
+          <a href="../comprehensive-quiz.html">📝 Comprehensive Quiz</a>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -281,6 +316,15 @@
     document.getElementById('prev').onclick=()=>show(i-1);
     window.addEventListener('keydown', e=>{ if(e.key==='ArrowRight') show(i+1); if(e.key==='ArrowLeft') show(i-1); });
     show(0);
+    
+    // Close nav dropdown when clicking outside
+    document.addEventListener('click', function(e) {
+      const navMenu = document.querySelector('.nav-menu');
+      const dropdown = document.querySelector('.nav-dropdown');
+      if (navMenu && dropdown && !navMenu.contains(e.target) && dropdown.classList.contains('show')) {
+        dropdown.classList.remove('show');
+      }
+    });
   </script>
 </body>
 </html>
